# combined-review

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
commands/: combined-review.md
docs/runs/: 2026-05-24-pr-152-plan-mode-review.md
plugins/combined-review/: README.md
plugins/combined-review/.claude-plugin/: plugin.json
plugins/combined-review/prompts/: _schema.md  code.md  plan.md
plugins/combined-review/scripts/: gc-worktrees.sh  materialize-scope.py  parse-args.py  render-prompt.py  report.py  validate-clusters.py
plugins/combined-review/skills/review/: SKILL.md
prompts/: docs.md  spec.md
scripts/: cleanup-worktree.sh  install.sh  materialize-scope.py  normalize-findings.py  orchestrate.py  render-prompt.py  resolve-scope.py  run-codex.py  validate-clusters.py
tests/: conftest.py  test_cleanup_worktree.py  test_gc_worktrees.py  test_materialize_diff_scopes.py  test_materialize_files_and_modes.py  test_materialize_pr.py  test_materialize_uncommitted.py  test_normalize_findings.py  test_orchestrate_cli.py  test_orchestrate_phase_a.py  test_orchestrate_phase_c_post.py  test_orchestrate_phase_c_pre.py  test_orchestrate_run_codex.py  test_parse_args.py  test_plugin_manifests.py  test_render_prompt.py  test_report.py  test_resolve_scope_autodetect.py  test_resolve_scope_explicit.py  test_resolve_scope_pr.py  test_run_codex.py  test_validate_clusters.py
