[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "combined-review"
version = "0.1.0"
description = "Claude Code skill that fuses Claude + Codex reviews in one session"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.21.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
packages = ["combined_review"]

[tool.pytest.ini_options]
testpaths = ["tests"]
